Fix wrapping for small screen

--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,7 @@
 
 .info form {
   display: flex;
+  flex-wrap: wrap;
   margin: 0 0 1em;
 }
 
